# dts_restore_plus

./: CLAUDE.md  README.md  README.txt  RELEASING.md  WEBOS25-DTS.md  downmix.conf  index.html  init_dts.sh  install.sh  uninstall.sh
.claude/rules/: releasing.md
.claude/skills/release-webos25/: SKILL.md
.github/workflows/: release.yml
api/: apps.json
api/apps/io.github.josippapez.dtsenabler/: full_description.html
api/apps/io.github.josippapez.dtsenabler/releases/: latest.json
dts-enabler-app/: .gitignore  README.md  appinfo.json  index.html
dts-enabler-app/css/: style.css
dts-enabler-app/js/: app.js
dts-enabler-app/service/: package.json  service.js  services.json
dts-enabler-universal/: .gitignore  appinfo.json  index.html
dts-enabler-universal/css/: style.css
dts-enabler-universal/js/: app.js
dts-enabler-universal/payload/cx/: README
gst-dtstolpcm/: gstbdlpcmenc.c  gstbdlpcmenc.h  meson.build  plugin.c
packaging/homebrew/: README.md  io.github.josippapez.dtsenabler.yml  org.webosbrew.dtsenabler.yml
webos25/: .gitignore  README.md  build.sh  detect-target.sh  init_dts25.sh  install.sh  uninstall.sh
webos25/app/: README.md  appinfo.json  index.html
webos25/app/css/: style.css
webos25/app/js/: app.js
webos25/app/payload/testfiles/: DTS-HD-MA-5.1.m2ts  README
webos25/app/payload/webos25/: README
webos25/app/payload/webos25-demux/: README
webos25/app/payload/webos25-truehd/: README
webos25/app/service/: io.github.josippapez.dtsenabler.service.api.json  io.github.josippapez.dtsenabler.service.perm.json  io.github.josippapez.dtsenabler.service.role.json  org.webosbrew.dtsenabler.service.api.json  org.webosbrew.dtsenabler.service.perm.json  org.webosbrew.dtsenabler.service.role.json  package.json  service.js  services.json
webos25/docs/: MULTI-MODEL.md  PASSTHROUGH.md  WEBOS25-DTS.md
webos25/docs/experimental/gst-dtstolpcm/: README.md  gstdtstolpcm.c  gstdtstolpcm.h
webos25/restore/: build-demux.sh  build-truehd.sh  init_dts25.sh  install.sh  uninstall.sh
webos25/restore/demux-out/: BUILD-REPORT.txt
webos25/restore/src/: TRUEHD-BUILD.md
webos25/restore/testfiles/: README.md
webos25/restore/truehd-out/: BUILD-REPORT.txt  libavcodec.so.58.134.100  libavfilter.so.7.110.100  libavformat.so.58.76.100  libavutil.so.56.70.100  libswresample.so.3.9.100
webos25/src/: gstdtsdec.c  gstdtsdec.h
webos25/truehd-out/: BUILD-REPORT.txt  libavcodec.so.58.134.100  libavfilter.so.7.110.100  libswresample.so.3.9.100
